--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -6,7 +6,7 @@ server {
     access_log /var/log/nginx/access.log;
     error_log  /var/log/nginx/error.log;
     location / {
-        try_files $uri $uri/ /index.php$is_args$args;    
+        try_files $uri $uri/ /index.php$is_args$args;
     }
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
@@ -15,5 +15,6 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_read_timeout 3600;
     }
 }
